tests/neg-custom-args/captures/consume-tvar-bound.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/consume-tvar-bound.scala:9:44 ----------------------------
9 |def hh[T <: Ref^](x: Box[T]): (Ref^, Int) = (x.elem, 1) // error (but msg is strange since it does not highlight the underlying box conflict)
  |                                            ^^^^^^^^^^^
  |                                   Found:    (T^'s1, Int)
  |                                   Required: (Ref^, Int)
  |
  |                                   Note that capability cap is not included in capture set {}.
  |
  |                                   where:    ^   refers to a fresh root capability in the result type of method hh
  |                                             cap is a fresh root capability in the type of type T
  |
  | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/consume-tvar-bound.scala:7:29 -------------------------------------------------
7 |def h[T <: Ref^](x: Box[T]): Ref^ = x.elem // error
  |                             ^^^^
  |                  Separation failure: method h's result type Ref^ hides cap, which appears in the bound of type T.
  |                  This is not allowed. The type T has to be returned explicitly in the result type.
  |
  |                  where:    cap is a fresh root capability in the type of type T
-- Error: tests/neg-custom-args/captures/consume-tvar-bound.scala:11:37 ------------------------------------------------
11 |def g[T <: Ref^](consume x: Box[T]): Ref^ = x.elem // error
   |                                     ^^^^
   |                Separation failure: method g's result type Ref^ hides cap, which appears in the bound of type T.
   |                This is not allowed. The type T has to be returned explicitly in the result type.
   |
   |                where:    cap is a fresh root capability in the type of type T
-- Error: tests/neg-custom-args/captures/consume-tvar-bound.scala:20:43 ------------------------------------------------
20 |  def f[T <: Ref^{rr}](consume x: Box[T]): Ref^ = x.elem // error
   |                                           ^^^^
   |                                    Separation failure: method f's result type Ref^ hides non-local parameter rr
